# chess

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/src/: background.cpp  background.hpp  client.cpp  gameClient.cpp  gameClient.hpp  gameRenderer.cpp  gameRenderer.hpp  graphics.hpp  graphicsFactory.hpp  img.cpp  img.hpp  main.cpp  mockImg.cpp  mockImg.hpp  moveList.cpp  moveList.hpp  scoreBoard.cpp  scoreBoard.hpp  soundPlayer.cpp  soundPlayer.hpp
common/: CMakeLists.txt
common/src/: ISubscriber.hpp  board.cpp  board.hpp  cell.hpp  command.cpp  command.hpp  game.cpp  game.hpp  gameFactory.cpp  gameFactory.hpp  gameMessages.cpp  gameMessages.hpp  graphics.cpp  graphics.hpp  graphicsFactory.cpp  img.cpp  img.hpp  moves.cpp  moves.hpp  physics.cpp  physics.hpp  physicsFactory.cpp  physicsFactory.hpp  piece.cpp  piece.hpp  pieceFactory.cpp  pieceFactory.hpp  publisher.cpp  publisher.hpp  state.cpp  state.hpp
pieces/BW/states/idle/: moves.txt
pieces/BW/states/jump/: config.json
pieces/KB/states/idle/: moves.txt
pieces/KW/states/idle/: config.json
pieces/KW/states/jump/: config.json
pieces/NW/states/idle/: config.json  moves.txt
pieces/NW/states/move/: config.json
pieces/PB/states/: transitions.csv
pieces/PB/states/idle/: moves.txt
pieces/PB/states/idle_after_first_move/: moves.txt
pieces/PW/states/idle/: moves.txt
pieces/PW/states/idle_after_first_move/: moves.txt
pieces/QB/states/idle/: moves.txt
pieces/QB/states/short_rest/: config.json
pieces/RW/states/: transitions.csv
pieces/RW/states/idle/: moves.txt
pieces/RW/states/long_rest/: config.json
pieces/RW/states/move/: config.json
server/: CMakeLists.txt
server/src/: game.cpp  game.hpp  server.cpp
sfml-audio-test/: CMakeLists.txt  main.cpp
